# puzzle-solver

./: .gitignore  README.md  pyproject.toml  venv.sh
assets/: adjacent.json  index.json  table_proof.html
assets/size-100/: cut_proof.html  masks.json  piece_id_to_mask.json  pieces.json  sprite_p.css  sprite_raster.css  sprite_raster_proof.html  sprite_vector.css  sprite_vector_proof.html  sprite_with_padding_layout.json  sprite_without_padding_layout.json
assets/size-100/data_uri/: 0.png.b64  1.png.b64  10.png.b64  100.png.b64  101.png.b64  102.png.b64  103.png.b64  104.png.b64  105.png.b64  106.png.b64  107.png.b64  108.png.b64  109.png.b64  11.png.b64  110.png.b64  111.png.b64  112.png.b64  113.png.b64  114.png.b64  115.png.b64  116.png.b64  117.png.b64  118.png.b64  119.png.b64  12.png.b64  120.png.b64  121.png.b64  122.png.b64  123.png.b64  124.png.b64  125.png.b64  126.png.b64  127.png.b64  128.png.b64  129.png.b64  13.png.b64  130.png.b64  131.png.b64  132.png.b64  133.png.b64  (+125 more)
