[tool.poetry]
name = "puzzle-solver"
version = "0.1.0"
description = ""
authors = ["박성빈 <psb106305@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
opencv-contrib-python = "^4.10.0.84"
numpy = "^2.0.1"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
